traffic-management/assets/only-mesh-routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: only-mesh-routing
  namespace: only-mesh-routing
spec:
  workloadSelector:
    labels:
      app: sleep
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
