traffic-management/assets/step5-details-slowdown-with-timeout.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - fault:
      delay:
        percentage:
          value: 30
        fixedDelay: 1s
    route:
    - destination:
        host: details
        subset: v2
    timeout: 0.5s
