traffic-management/assets/step5-details-slowdown.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - fault:
    delay:
      percentage:
        value: 30
      fixedDelay: 1s
    route:
    - destination:
        host: details
        subset: v1
