traffic-management/assets/step6-mirror.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        host: details
        subset: v1
      weight: 100
    mirror:
      host: httpbin
      subset: v1
    mirrorPercentage:
      value: 100.0
