traffic-management/assets/internet-blocked-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-direct-egress
  namespace: internet-blocked
spec:
  podSelector:
    matchLabels:
      all: sleep
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 127.0.0.1/32
        - 10.0.0.0/8
